<resources>
    <string name="app_name">IRIS</string>
    <string name="iris">IRIS</string>
    <string name="title_activity_cvliprincipal">cvliprincipal</string>
    <string name="title_activity_menu_cvli">MenuCvli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cvl__principal">Cvl_Principal</string>
    <string name="salvar">Concluir</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="incluir">Incluir</string>
    <string name="retornar">Retornar</string>
    <string name="vitima">Vítima</string>
    <string name="testemunha">Testemunha</string>
    <string name="investigado">Investigado</string>
    <string name="relatorio">Relatório</string>
    <string name="do_fato">Do Fato</string>
    <string name="do_silc">DO LEVANTAMENTO CADAVÉRICO</string>
    <string name="da_vitima">DA VÍTIMA</string>
    <string name="da_autoria">DA AUTORIA</string>
    <string name="das_providencias">DAS PROVIDÊNCIAS</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="distrito_vilarejo_povoado">Distrito/Vilarejo/Povoado</string>
    <string name="detalhamento_outro">Detalhamento Outro</string>
    <string name="municipio">Município</string>
    <string name="zona">Zona</string>
    <string name="detalhamento_do_local">Detalhamento do Local</string>
    <string name="logradouro">Logradouro</string>
    <string name="refer_ncia_do_local">Referência do Local</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="orgao_exp">Orgão Exp</string>
    <string name="data_exp">Data Exp</string>
    <string name="habilitacao_cnh">Habilitação(CNH)</string>
    <string name="categoria">Categoria</string>
    <string name="data_de_validade">Data de Validade</string>
    <string name="data_da_prisao">Data da Prisão</string>
    <string name="horario_da_prisao">Horário da Prisão</string>
    <string name="local_da_prisao">Local da Prisão</string>
    <string-array name="natureza">
        <item>Selecione...</item>
        <item>Homicídio(s)</item>
        <item>Feminicídio(s)</item>
        <item>Latrocínio(s)</item>
        <item>Lesão Corporal Seguida de Morte</item>
        <item>Morte(s) a Esclarecer</item>
    </string-array>
    <string-array name="OutraInstituicaoAcaoPolicial">
        <item>Selecione...</item>
        <item>Polícia Militar/ Ordinário</item>
        <item>Polícia Militar/ Especializada</item>
        <item>Polícia Rodoviária Federal</item>
        <item>Polícia Federal</item>
        <item>Guarda Municipal</item>
        <item>IBAMA</item>
        <item>Ministério Público</item>
        <item>Outras Instituições</item>
    </string-array>
    <string-array name="Municipio">
        <item>Selecione...</item>
        <item>Eunápolis</item>
        <item>Porto Seguro</item>
        <item>Itabela</item>
        <item>Santa Cruz Cabrália</item>
        <item>Guaratinga</item>
        <item>Belmonte</item>
        <item>Itagimirim</item>
        <item>Itabela</item>
    </string-array>
    <string-array name="Logradouro">
        <item>Selecione...</item>
        <item>Rua</item>
        <item>Avenida</item>
        <item>Estrada</item>
        <item>Alameda</item>
        <item>Caminho</item>
        <item>Cemiterio</item>
        <item>Feira</item>
        <item>Rodovia</item>
        <item>Parque</item>
        <item>Travessa</item>
        <item>Largo</item>
        <item>Jardim</item>
        <item>Praça</item>
        <item>Quadra</item>
        <item>Fazenda</item>
        <item>Mata</item>
        <item>Plantio Agricula</item>
        <item>Pasto</item>
        <item>Praia</item>
        <item>Estabelecimento Prisional</item>
        <item>Rio</item>
        <item>Aldeia Indigena</item>
        <item>Assentamento</item>
        <item>Anel Viário</item>
        <item>Gleba</item>
    </string-array>
    <string-array name="MunicipioLocalizacao">
        <item>Selecione...</item>
        <item>Eunápolis</item>
        <item>Porto Seguro</item>
        <item>Itagimirim</item>
        <item>Santa Cruz Cabrália</item>
        <item>Itabela</item>
        <item>Arraial ajuda</item>
    </string-array>
    <string-array name="Guiaparapericia">
        <item>Selecione...</item>
        <item>Local de Crime</item>
        <item>Lesões Corporais</item>
        <item>Necropsia</item>
        <item>Exame Toxicológico</item>
        <item>Recenticidade de Disparo de Arma de fogo</item>
        <item>Balística</item>
        <item>Chumbo particulado</item>
        <item>Identificação de Veículo</item>
        <item>Outras</item>
    </string-array>
    <string-array name="TipoRelatorioSemanal">
        <item>01/01/2020 - 05/01/2020</item>
        <item>06/01/2020 - 12/01/2020</item>
        <item>13/01/2020 - 19/01/2020</item>
        <item>20/01/2020 - 26/01/2020</item>
        <item>27/01/2020 - 02/02/2020</item>
        <item>03/02/2020 - 09/02/2020</item>
        <item>10/02/2020 - 16/02/2020</item>
        <item>17/02/2020 - 23/02/2020</item>
        <item>24/02/2020 - 01/03/2020</item>
        <item>02/03/2020 - 08/03/2020</item>
        <item>09/03/2020 - 15/03/2020</item>
        <item>16/03/2020 - 22/03/2020</item>
        <item>23/03/2020 - 29/03/2020</item>
        <item>30/03/2020 - 05/04/2020</item>
        <item>06/04/2020 - 12/04/2020</item>
        <item>13/04/2020 - 19/04/2020</item>
        <item>20/04/2020 - 26/04/2020</item>
        <item>27/04/2020 - 03/05/2020</item>
        <item>04/05/2020 - 10/05/2020</item>
        <item>11/05/2020 - 17/05/2020</item>
        <item>18/05/2020 - 24/05/2020</item>
        <item>25/05/2020 - 31/05/2020</item>
        <item>01/06/2020 - 07/06/2020</item>
        <item>08/06/2020 - 14/06/2020</item>
        <item>15/06/2020 - 21/06/2020</item>
        <item>22/06/2020 - 28/06/2020</item>
        <item>29/06/2020 - 05/07/2020</item>
        <item>06/07/2020 - 12/07/2020</item>
        <item>13/07/2020 - 19/07/2020</item>
        <item>20/07/2020 - 26/07/2020</item>
        <item>27/07/2020 - 02/08/2020</item>
        <item>03/08/2020 - 09/08/2020</item>
        <item>10/08/2020 - 16/08/2020</item>
        <item>17/08/2020 - 23/08/2020</item>
        <item>24/08/2020 - 30/08/2020</item>
        <item>31/08/2020 - 06/09/2020</item>
        <item>07/09/2020 - 13/09/2020</item>
        <item>14/09/2020 - 20/09/2020</item>
        <item>21/09/2020 - 27/09/2020</item>
        <item>28/09/2020 - 04/10/2020</item>
        <item>05/10/2020 - 11/10/2020</item>
        <item>12/10/2020 - 18/10/2020</item>
        <item>19/10/2020 - 25/10/2020</item>
        <item>26/10/2020 - 01/11/2020</item>
        <item>02/11/2020 - 08/11/2020</item>
        <item>09/11/2020 - 15/11/2020</item>
        <item>16/11/2020 - 22/11/2020</item>
        <item>23/11/2020 - 29/11/2020</item>
        <item>30/11/2020 - 06/12/2020</item>
        <item>07/12/2020 - 13/12/2020</item>
        <item>14/12/2020 - 20/12/2020</item>
        <item>21/12/2020 - 27/12/2020</item>
    </string-array>
    <string-array name="DTs23Coorpin">
        <item>Selecione...</item>
        <item>PLANTÃO DE EUNÁPOLIS</item>
        <item>DT DE EUNÁPOLIS</item>
        <item>DRFR/ EUNÁPOLIS</item>
        <item>1ª DT DE PORTO SEGURO</item>
        <item>2ª DT PORTO SEGURO/ ARRAIAL D’AJUDA</item>
        <item>DELTUR/ PORTO SEGURO</item>
        <item>DEAM/ PORTO SEGURO</item>
        <item>DT DE SANTA CRUZ CABRÁLIA</item>
        <item>DT DE BELMONTE</item>
        <item>DT DE ITAGIMIRIM</item>
        <item>DT DE ITAPEBI</item>
        <item>DT DE ITABELA</item>
        <item>DT DE GUARATINGA</item>
    </string-array>
    <string-array name="Distrito">
        <item>Selecione...</item>
        <item>Sede</item>
        <item>Distrito</item>
        <item>Vilarejo</item>
        <item>Povoado</item>
    </string-array>
    <string-array name="Estado">
        <item>BA</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string-array name="Zona">
        <item>Selecione...</item>
        <item>Zona Urbana</item>
        <item>Zona Rural</item>
    </string-array>
    <string-array name="Detalhelocal">
        <item>Selecione...</item>
        <item>Via Pública</item>
        <item>Interior Residência</item>
        <item>Estabelecimento Comercial</item>
        <item>Repartição Pública</item>
        <item>Terreno Baldio</item>
        <item>Mar</item>
        <item>Rio</item>
        <item>Praia</item>
        <item>Estabelecimento Prisional</item>
        <item>Mata</item>
        <item>Plantação Agricula</item>
        <item>Pasto</item>
        <item>Terreiro de Camdomblé</item>
        <item>Terreiro de Umbanda</item>
        <item>Igreja Católica</item>
        <item>Igreja Evnagélica</item>
        <item>Quintal</item>
        <item>Ponto de Ônibus</item>
        <item>Interior de Veiculo Automotor</item>
        <item>Outros</item>
    </string-array>
    <string-array name="StatusVitima">
        <item>Selecione...</item>
        <item>Óbito</item>
        <item>Sobrevivente</item>
    </string-array>
    <string-array name="CondicaoVitima">
        <item>Selecione...</item>
        <item>Lesionada</item>
        <item>Ilesa</item>
    </string-array>
    <string-array name="EstadodaVitima">
        <item>Selecione...</item>
        <item>Hospitalizada com risco de morte</item>
        <item>Hospitalizada fora de risco de morte</item>
        <item>Não hospitalizada</item>
    </string-array>
    <string-array name="GrupoSanguinioi">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>
    <string-array name="FatorRH">
        <item>Selecione...</item>
        <item>Positivo</item>
        <item>Negativo</item>
    </string-array>
    <string-array name="OrientacaoSexual">
        <item>Selecione...</item>
        <item>Heterossexual</item>
        <item>Homossexual</item>
        <item>Bissexual</item>
        <item>Transsexual</item>
        <item>Travesti</item>
        <item>Outros</item>
        <item>Não Informado</item>
    </string-array>
    <string-array name="Religiao">
        <item>Selecione...</item>
        <item>Evangélico</item>
        <item>Católico</item>
        <item>Espírita</item>
        <item>Ateu</item>
        <item>Afro</item>
        <item>Mulçumano</item>
        <item>Judaísmo</item>
        <item>Budista</item>
    </string-array>
    <string name="da_fase_judicial">DA FASE JUDICIAL</string>
    <string name="cadastro_do_automovel_utilizado_no_crime">Veículo Utilizado na Ação Criminosa</string>
    <string name="tipo_de_veiculo">Tipo de Veículo</string>
</resources>