<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBacground"
    tools:context=".AutomovelCrimeFatoActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTituloCadastroAutomovelCrimeFato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/cadastro_do_automovel_utilizado_no_crime"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTipoVeiculoCrimeFato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="279dp"
                android:layout_marginRight="279dp"
                android:text="@string/tipo_de_veiculo"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTituloCadastroAutomovelCrimeFato" />

            <Spinner
                android:id="@+id/spinnerTipoVeiculoCrimeFato"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorSpinner"
                android:imeOptions="actionNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTipoVeiculoCrimeFato" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clAutomovelCrime"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTipoVeiculoCrimeFato">


                <TextView
                    android:id="@+id/tvMarcaVeiculoCrimeFato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Marca"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvModeloAutomovelCrimeFato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Modelo"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerMarcaCarroCrimeFato" />

                <TextView
                    android:id="@+id/tvCorAutomovelCrimeFato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Cor"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtModeloCarroCrimeFato" />

                <TextView
                    android:id="@+id/tvPlacaAutomovelCrimeFato"
                    android:layout_width="35dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Placa"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtCorCarroCrimeFato" />

                <Spinner
                    android:id="@+id/spinnerMarcaCarroCrimeFato"
                    android:layout_width="163dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorSpinner"
                    android:imeOptions="actionNext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMarcaVeiculoCrimeFato" />

                <EditText
                    android:id="@+id/edtModeloCarroCrimeFato"
                    android:layout_width="165dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorEditext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvModeloAutomovelCrimeFato" />

                <EditText
                    android:id="@+id/edtCorCarroCrimeFato"
                    android:layout_width="157dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorEditext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCorAutomovelCrimeFato" />

                <EditText
                    android:id="@+id/edtPlacaCarroCrimeFato"
                    android:layout_width="172dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorEditext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlacaAutomovelCrimeFato" />

                <CheckBox
                    android:id="@+id/cbNidentificadoMarcaCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Não Identificado"
                    android:imeOptions="actionNext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spinnerMarcaCarroCrimeFato"
                    app:layout_constraintTop_toBottomOf="@+id/tvMarcaVeiculoCrimeFato" />

                <CheckBox
                    android:id="@+id/cbNIdentificadoModeloCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Não Identificado"
                    android:imeOptions="actionNext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/edtModeloCarroCrimeFato"
                    app:layout_constraintTop_toBottomOf="@+id/tvModeloAutomovelCrimeFato" />

                <CheckBox
                    android:id="@+id/cbNIdentificadoCorCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Não Identificado"
                    android:imeOptions="actionNext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/edtCorCarroCrimeFato"
                    app:layout_constraintTop_toBottomOf="@+id/tvCorAutomovelCrimeFato" />

                <CheckBox
                    android:id="@+id/cbNIdentificadoPlacaCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:text="Não Identificado"
                    android:imeOptions="actionNext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/edtPlacaCarroCrimeFato"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlacaAutomovelCrimeFato" />

                <TextView
                    android:id="@+id/tvDescricaoCarroCrime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Descrição"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtPlacaCarroCrimeFato" />

                <EditText
                    android:id="@+id/edtDescricaoCarroCrime"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorEditext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescricaoCarroCrime" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clBiscicletaCrime"
                android:layout_width="372dp"
                android:layout_height="282dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTipoVeiculoCrimeFato">


                <TextView
                    android:id="@+id/tvDescricaoBiscicletaCrimeFato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Descrição"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtDescricaoBiscicletaCrimeFato"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorEditext"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescricaoBiscicletaCrimeFato" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btnCadastrarCarroCrimeFato"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorBotao"
                android:text="@string/incluir"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clAutomovelCrime" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>